--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ body {
 	white-space: normal;
 	word-wrap: break-word;
 	font-size: 13px;
-	font-weight: bold;
+	font-weight: normal;
 	color: dimgrey;
 	margin: 5px 0px 0px 15px;
 	list-style-type: square ;
