Support tooltip with html and css

--- a/css/styles.css
+++ b/css/styles.css
@@ -120,3 +120,13 @@ ul {
 hr {
 	margin: 10px 0px 7px 5px;
 }
+
+div.tooltip {
+  position: absolute;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: lightsteelblue;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
