--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,11 @@ body {
 	border: solid 2px #ccc;
 }
 
+svg {
+	width: 1000px;
+	height: 600px;
+}
+
 #info-board {
 	margin: 10px 0px 0px 10px;
 	display: inline-block;
