--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ hr {
 
 div.tooltip {
   position: absolute;
-  padding: 2px;
+  padding: 3px 3px 3px 3px;
   font: 12px sans-serif;
   background: lightgrey;
   border: 0px;
