--- a/css/styles.css
+++ b/css/styles.css
@@ -16,8 +16,8 @@ body {
 #info-board {
 	margin: 10px 0px 0px 10px;
 	display: inline-block;
-	width: 300px;
-	height: 600px;
+	width: 300px;	
+	height: auto;
 	vertical-align: top;
 	border: solid 2px #ccc;
 }
@@ -37,7 +37,6 @@ body {
 
 #list-container {
 	width: 291px;
-	height: 532px;
 }
 
 .inner-list {
